feat: force update with post endpoint and add api-key security
